Student Login and add course role

--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -38,6 +38,16 @@
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
 
+      <!-- Add Course -->
+      <div class="col">
+        <div class="card dashboard-card text-center p-3">
+          <div class="card-body">
+            <div class="dashboard-icon text-primary"><i class="fas fa-user-plus"></i></div>
+            <h5 class="card-title">Add Course</h5>
+            <a href="{{ url_for('add_course') }}" class="stretched-link"></a>
+          </div>
+        </div>
+      </div>
       <!-- Add Student -->
       <div class="col">
         <div class="card dashboard-card text-center p-3">
