teacher and student login

--- a/server/templates/student_login.html
+++ b/server/templates/student_login.html
@@ -25,10 +25,10 @@
                     <label for="registration_number" class="form-label">Registration Number</label>
                     <input type="text" class="form-control" name="registration_number" required>
                 </div>
-                <div class="mb-3">
+                <!-- <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" required>
-                </div>
+                </div> -->
                 <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
         </div>
